--- a/_includes/parts/footer.liquid
+++ b/_includes/parts/footer.liquid
@@ -12,18 +12,17 @@
 <!-- Footer Menu Section -->
 <section id="footer-menu-section" class="footer-menu-section space-200-top-bottom">
 	<div class="container">
-		<div class="row space-150-bottom">
+		<!-- <div class="row space-150-bottom">
 			<div class="columns small-10 medium-6 large-5">
 				<div class="logo space-50-bottom">
 					<img src="media/logo-full-white.png" alt="">
 				</div>	
 			</div>
 			<div class="columns small-12 large-6 large-offset-1">
-				<!-- <div class="title h2 strong text-gradient font-h">Digital <span class="long-word">Transformation</span> and Growth Marketing Experts!</div> -->
 				<div class="title h3 strong text-gradient font-h">Experts in Digital <span class="long-word">Transformation</span> and Growth Marketing!</div>
 				<div class="description p space-50-top">We are a Branding, Marketing and Advertising Agency, that leverages data-driven decision making to deliver innovative solutions for your business. Our expertise spans across branding, web development, eCommerce, SEO, digital advertising, social media, and video production. We help businesses of all sizes achieve their digital goals by combining creative designs with cutting-edge technology.</div>
 			</div>
-		</div>
+		</div> -->
 		<hr class="fill-gradient">
 		<div class="row space-150-top">
 			<div class="columns small-12 medium-6 large-4 space-150-bottom">
