--- a/_includes/parts/header.liquid
+++ b/_includes/parts/header.liquid
@@ -1,39 +1,293 @@
+<style type="text/css">
+
+.menu-section {
+	position: fixed;
+	z-index: 100;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: auto;
+	pointer-events: none;
+}
+
+.menu-section .menu-toggle {
+	position: relative;
+	z-index: 3;
+	display: inline-block;
+	cursor: pointer;
+	pointer-events: all;
+	padding: var(--space-25);
+	box-shadow: 0 0 0 2px var(--white), inset 0 0 3px 0px var(--dark);
+	border-radius: var(--space-50);
+	font-size: 0;
+	width: calc(var(--space-100) * 2.75);
+	height: var(--space-100);
+	overflow: hidden;
+	transform-origin: top left;
+	transform: scale(1.333);
+	transition: .4s ease-out;
+	filter: saturate(0%);
+	opacity: 0.666;
+	transition: .4s ease-out;
+}
+
+.menu-section .menu-toggle:hover,
+.menu-section .menu-toggle:focus {
+	filter: saturate(100%);
+	opacity: 1;
+}
+
+.menu-section .menu-toggle * { pointer-events: none; }
+
+.menu-section .menu-toggle .circle {
+	position: absolute;
+	display: inline-block;
+	top: var(--space-25);
+	left: var(--space-25);
+	right: auto;
+	text-indent: -9999px;
+	width: var(--space-50);
+	height: var(--space-50);
+	line-height: var(--space-50);
+	border-radius: var(--space-50);
+	background-color: var(--white);
+	transition: .4s ease-out;
+}
+
+.menu-section .menu-toggle .circle::before,
+.menu-section .menu-toggle .circle::after {
+	display: block;
+	font-size: calc(var(--space-100) * 0.5);
+	color: var(--white);
+	text-indent: 0;
+	text-transform: uppercase;
+	width: var(--space-150);
+/*	height: var(--space-50);*/
+	position: absolute;
+	top: 50%;
+	line-height: var(--space-100);
+	transition: .4s ease-out;
+}
+
+.menu-section .menu-toggle .circle::before {
+	content: "Close";
+	right: 0;
+	transform: translate(-48%, -43%);
+	opacity: 0;
+}
+.menu-section .menu-toggle .circle::after {
+	content: "Menu";
+	left: 0;
+	transform: translate(48%, -43%);
+	opacity: 1;
+}
+
+.menu-section .menu-checkbox:checked ~ .menu-toggle {
+	filter: hue-rotate(-45deg) saturate(100%);
+	opacity: 1;
+}
+
+.menu-section .menu-checkbox:checked ~ .menu-toggle .circle {
+	left: var(--space-200);
+}
+
+.menu-section .menu-checkbox:checked ~ .menu-toggle .circle::before { opacity: 1; }
+.menu-section .menu-checkbox:checked ~ .menu-toggle .circle::after { opacity: 0; }
+
+.menu-section .menu {
+	pointer-events: all;
+	position: absolute;
+	z-index: 2;
+	left: var(--space-150);
+	bottom: var(--space-200);
+}
+
+.menu-section .menu::before {
+	content: '';
+	pointer-events: none;
+	display: block;
+	width: 200vw;
+	height: 200vh;
+	position: absolute;
+	z-index: -1;
+	bottom: 0;
+	left: 0;
+	transform: translate(-200%, 200%);
+	background-image: radial-gradient(circle at center, rgba(21, 0, 26, 0.85) 35%, rgba(21, 0, 26, 0) 85%);
+	transition: 0.85s ease-out;
+	backdrop-filter: blur(8px);
+	-webkit-backdrop-filter: blur(8px);
+}
+
+.menu-section .menu-checkbox:checked ~ .menu::before {
+	transform: translate(-50%, 50%);
+}
+
+.menu-section .menu ul {
+	list-style-type: "\2726"
+}
+.menu-section .menu ul li {
+	font-size: calc(var(--space-100) * 1.5);
+	text-indent: -500px;
+	transition: .4s ease-out;
+	text-transform: uppercase;
+	line-height: 1;
+	margin-bottom: var(--space-50);
+}
+
+.menu-section .menu ul li::marker {
+	content: "\2726";
+	margin-left: -5em;
+}
+
+.menu-section .menu a {
+	display: inline-block;
+	cursor: pointer;
+	line-height: 1;
+	background-image: linear-gradient(135deg, var(--white), var(--white), var(--white));
+	-webkit-background-clip: text;
+	background-clip: text;
+	-webkit-text-fill-color: transparent;
+	transition: .3s ease-out;
+}
+
+.menu-section .menu a:hover {
+	background-image: linear-gradient(135deg, var(--blue-light), var(--violet), var(--red-light));
+	filter: saturate(150%) hue-rotate(45deg);
+}
+
+.menu-section .menu ul li:nth-child(1) {
+	transition-delay: .1s
+}
+
+.menu-section .menu ul li:nth-child(2) {
+	transition-delay: .2s
+}
+
+.menu-section .menu ul li:nth-child(3) {
+	transition-delay: .3s
+}
+
+.menu-section .menu ul li:nth-child(4) {
+	transition-delay: .4s
+}
+
+.menu-section .menu ul li:nth-child(5) {
+	transition-delay: .5s
+}
+
+.menu-section .menu ul li:nth-child(6) {
+	transition-delay: .6s
+}
+
+.menu-section .menu ul li:nth-child(7) {
+	transition-delay: .7s
+}
+
+.menu-section .menu ul li:nth-child(8) {
+	transition-delay: .8s
+}
+
+.menu-section .menu-checkbox:checked ~ .menu ul li {
+	text-indent: var(--space-50);
+}
+</style>
+
+<!-- Menu Section -->
+<section id="menu-section" class="menu-section space-200">
+	<input type="checkbox" id="menu-checkbox" class="menu-checkbox visuallyhidden">
+	<label class="menu-toggle text-white fill-gradient" tabindex="0" for="menu-checkbox">
+		<span class="circle">Menu</span>
+	</label>
+	<nav class="menu text-white">
+		<ul>
+			<li><a class="strong" href="" tabindex="0">Home</a></li>
+			<li><a class="strong" href="" tabindex="0">Services</a></li>
+			<li><a class="strong" href="" tabindex="0">Portfolio</a></li>
+			<li><a class="strong" href="" tabindex="0">About</a></li>
+			<li><a class="strong" href="" tabindex="0">Brands</a></li>
+			<li><a class="strong" href="" tabindex="0">Contact</a></li>
+		</ul>
+	</nav>
+</section>
+<!-- END : Menu Section -->
+
+
+{% comment %}
 <style>
-	.header-section {}
+	.header-section {
+	}
 	.header-section .menu {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-
+/*		width: var(--container-width);*/
+		margin: 0 var(--space-200);
 		backdrop-filter: blur(7px);
 		-webkit-backdrop-filter: blur(7px);
 		background: rgba(255, 255, 255, 0.666);
-		box-shadow: 0 0 3px 1px rgba(0, 120, 255, 0.35),  0 0 9px 3px rgba(180, 50, 255, 0.25);
+		box-shadow: 0 0 3px 1px rgba(0, 120, 255, 0.35),  0 0 9px 3px rgba(180, 50, 255, 0.35);
+		border-bottom: solid 1.5px rgba(255, 255, 255, 0.85);
+		filter: brightness(1.075);
+		border-radius: var(--space-50);
+	}
+	.header-section .menu .logo {
+		width: calc(var(--space-100) * 7.25);
+	}
+	.header-section .menu .logo img {
+		transform-origin: left center;
+		transform: scale(0.75);
+	}
+
+	.header-section .menu .navigation {
+		display: none;
 	}
 
 	.header-section .navigation .link {
 		line-height: 1;
-		margin-left: var(--space-25);
 	}
+
+	@media( min-width: 640px )  {}
+	@media( min-width: 1040px ) {
+		.header-section .menu .logo {
+			width: calc(var(--space-100) * 6.25);
+		}
+		.header-section .menu .menu-toggle {
+			display: none;
+		}
+		.header-section .menu .navigation {
+			display: block;
+		}
+	}
+	@media( min-width: 1480px ) {}
 </style>
 <!-- Header Section -->
-<section id="header-section" class="header-section space-150-left-right space-50-top-bottom position-sticky" style="z-index: 9; top: 0; left: 0;">
-	<div class="menu radius-50 fill-light">
+<!-- <section id="header-section" class="header-section space-150-left-right space-100-top position-sticky" style="z-index: 9; top: 0; left: 0;"> -->
+<section id="header-section" class="header-section position-sticky space-100-top" style="z-index: 9; top: 0; left: 0;">
+	<!-- <div class="menu radius-50 fill-light"> -->
+	<div class="menu fill-light">
 		<span class="logo space-25-top-bottom space-50-left-right" style="font-size: 0;">
-			<a class="inline space-25-left" href="/" style="font-size: 0; width: calc(var(--space-100) * 4);">
+			<a class="block" href="/" style="font-size: 0;">
 				<img class="block no-pointer" src="media/logo-full-black.png" alt="WindsorSouza Logo">
 			</a>
 			<!-- <a class="inline space-25-left" href="/" style="font-size: 0; width: calc(var(--space-100) * 3);">
 				<img class="block no-pointer" src="media/logo-min-black.png" alt="WindsorSouza Logo">
 			</a> -->
 		</span>
-		<span class="navigation hide-small space-50">
-			<a class="link p text-uppercase inline space-25" href="/">Projects<span class="material-symbols-rounded inline-middle" style="font-size: var(--h5); line-height: 1;">keyboard_arrow_down</span></a>
-			<a class="link p text-uppercase inline space-25" href="/">About</a>
-			<a class="link p text-uppercase inline space-25" href="/">Careers</a>
-			<a class="link p text-uppercase inline space-25" href="/">Services<span class="material-symbols-rounded inline-middle" style="font-size: var(--h5); line-height: 1;">keyboard_arrow_down</span></a>
-			<a class="link p text-uppercase inline space-25 space-50-left-right fill-gradient text-white radius-25" href="/"><span class="material-symbols-rounded inline-middle" style="font-size: var(--h5); line-height: 1;">perm_phone_msg</span> +91 89716 83598</a>
+		<div class="menu-toggle text-center space-50">
+			<span class="material-symbols-rounded inline-middle" style="font-size: var(--h2); line-height: 1;">menu</span>
+			<span class="block label strong">MENU</span>
+		</div>
+		<span class="navigation space-50">
+			<a class="link p text-uppercase inline space-50" href="/">Projects</a>
+			<a class="link p text-uppercase inline space-50" href="/">About</a>
+			<a class="link p text-uppercase inline space-50" href="/">Careers</a>
+			<a class="link p text-uppercase inline space-50" href="/">Services</a>
+			<a class="link p text-uppercase inline space-50 space-50-left-right fill-gradient text-white radius-25" style="margin-left: var(--space-25);" href="/"><span class="material-symbols-rounded inline-middle" style="font-size: var(--h5); line-height: 1;">perm_phone_msg</span> +91 89716 83598</a>
 		</span>
 	</div>
 </section>
 <!-- END: Header Section -->
+{% endcomment %}
