--- a/_includes/parts/project-card.liquid
+++ b/_includes/parts/project-card.liquid
@@ -2,16 +2,16 @@
 	:root {
 		--fluid-box-width: calc(var(--view-width) - var(--space-200));
 		--fluid-box-height: calc(var(--view-height) - var(--space-200));
-		--fem: calc(var(--fluid-box-width) * 0.01);
+		--fem: calc((var(--fluid-box-width) * 1) / 100);
 	}
 	@media( min-width: 640px )  {
 		:root {
-			--fem: calc(var(--fluid-box-width) * 0.0075);
+			--fem: calc((var(--fluid-box-width) * 0.75) / 100);
 		}
 	}
 	@media( min-width: 1040px ) {
 		:root {
-			--fem: calc(var(--fluid-box-width) * 0.005);
+			--fem: calc((var(--fluid-box-width) * 0.5) / 100);
 		}
 	}
 	@media( min-width: 1480px ) {}
@@ -281,6 +281,75 @@
 		</div>
 		<div class="mockup space-150 float-right">
 			<img class="block" src="media/projects/bursar-mockup.png" alt="">
+		</div>
+	</div>
+</div>
+<!-- End: Each Project -->
+<!-- Each Project -->
+<div class="row space-100-left-right space-50-top-bottom">
+	<div class="project fill-dark radius-100 img-cover" style="background-image: url('media/projects/slipstream-bg.svg');">
+		<div class="info space-150 float-left">
+			<div class="client">SlipStream Performance</div>
+			<div class="title strong font-h">Study Now Pay Later: Easy Education Loans with PWA solutions</div>
+			<div class="tags">
+				<div class="tag inline">Logo Design</div>
+				<div class="tag inline">UX Design</div>
+				<div class="tag inline">Website</div>
+				<div class="tag inline">API Integration</div>
+				<div class="tag inline">Brand Collateral</div>
+			</div>
+			<a class="cta inline" href="/">
+				<span>Learn More <span class="material-symbols-rounded inline-top" style="font-size: calc(var(--fem) * 5); line-height: 1.275;">arrow_right_alt</span></span>
+			</a>
+		</div>
+		<div class="mockup space-150 float-right">
+			<img class="block" src="media/projects/slipstream-mockup.png" alt="">
+		</div>
+	</div>
+</div>
+<!-- End: Each Project -->
+<!-- Each Project -->
+<div class="row space-100-left-right space-50-top-bottom">
+	<div class="project fill-light radius-100 img-cover" style="background-image: url('media/projects/umber-bg.png');">
+		<div class="info space-150 float-left">
+			<div class="client">Umber Infusion</div>
+			<div class="title strong font-h">Study Now Pay Later: Easy Education Loans with PWA solutions</div>
+			<div class="tags">
+				<div class="tag inline">Logo Design</div>
+				<div class="tag inline">UX Design</div>
+				<div class="tag inline">Website</div>
+				<div class="tag inline">API Integration</div>
+				<div class="tag inline">Brand Collateral</div>
+			</div>
+			<a class="cta inline" href="/">
+				<span>Learn More <span class="material-symbols-rounded inline-top" style="font-size: calc(var(--fem) * 5); line-height: 1.275;">arrow_right_alt</span></span>
+			</a>
+		</div>
+		<div class="mockup space-150 float-right">
+			<img class="block" src="media/projects/umber-mockup.svg" alt="">
+		</div>
+	</div>
+</div>
+<!-- End: Each Project -->
+<!-- Each Project -->
+<div class="row space-100-left-right space-50-top-bottom">
+	<div class="project fill-dark radius-100 img-cover" style="background-image: url('media/projects/fishandflow-bg.svg');">
+		<div class="info space-150 float-left">
+			<div class="client">Fish&amp;Flow</div>
+			<div class="title strong font-h">Study Now Pay Later: Easy Education Loans with PWA solutions</div>
+			<div class="tags">
+				<div class="tag inline">Logo Design</div>
+				<div class="tag inline">UX Design</div>
+				<div class="tag inline">Website</div>
+				<div class="tag inline">API Integration</div>
+				<div class="tag inline">Brand Collateral</div>
+			</div>
+			<a class="cta inline" href="/">
+				<span>Learn More <span class="material-symbols-rounded inline-top" style="font-size: calc(var(--fem) * 5); line-height: 1.275;">arrow_right_alt</span></span>
+			</a>
+		</div>
+		<div class="mockup space-150 float-right">
+			<img class="block" src="media/projects/fishandflow-mockup.png" alt="">
 		</div>
 	</div>
 </div>
