--- a/_includes/parts/footer.liquid
+++ b/_includes/parts/footer.liquid
@@ -101,11 +101,11 @@
 		.copyright-section .signature { text-align: left; }
 	}
 </style>
-<section class="copyright-section space-50-top-bottom fill-light" id="copyright-section">
+<section class="copyright-section space-50-top-bottom fill-gradient" id="copyright-section">
 	<div class="container">
-		<div class="row">
+		<div class="row text-center">
 			<div class="columns small-12 large-8 space-25">
-				<div class="p text-gradient font-h strong">Copyright <span class="h6 inline-middle">&copy;</span> 2025 – WINDSOR SOUZA PVT LTD | All Rights Reserved</div>
+				<div class="p text-white font-h strong">Copyright <span class="h6 inline-middle">&copy;</span> 2025 – WINDSOR SOUZA PVT LTD | All Rights Reserved</div>
 			</div>
 			<!-- <div class="signature columns small-12 large-4 space-25">
 				<a href="https://windsorsouza.com?utm_source=client+website" target="_blank" class="p block font-h">Handcrafted with <span class="h6 inline-middle" style="color: darkorange;">&heartsuit;</span> at — <span style="color: darkorange;">WindsorSouza.com</span></a>
