--- a/_includes/parts/project-card.liquid
+++ b/_includes/parts/project-card.liquid
@@ -1,27 +1,41 @@
 <style>
 	:root {
-		--fluid-box-width: calc(var(--view-width) - var(--space-200));
-		--fluid-box-height: calc(var(--view-height) - var(--space-200));
-		--fem: calc((var(--fluid-box-width) * 1) / 100);
+/*		--fluid-box-width: calc(var(--view-width) - var(--space-250));*/
+/*		--fluid-box-height: calc(var(--view-height) - var(--space-250));*/
+/*		--fem: calc((var(--fluid-box-width) * 1) / 100);*/
+		--fem: calc((var(--view-width) * 1) / 100);
 	}
 	@media( min-width: 640px )  {
 		:root {
-			--fem: calc((var(--fluid-box-width) * 0.75) / 100);
+/*			--fem: calc((var(--fluid-box-width) * 0.75) / 100);*/
+			--fem: calc((var(--view-width) * 0.75) / 100);
 		}
 	}
 	@media( min-width: 1040px ) {
 		:root {
-			--fem: calc((var(--fluid-box-width) * 0.5) / 100);
+/*			--fem: calc((var(--fluid-box-width) * 0.5) / 100);*/
+			--fem: calc((var(--view-width) * 0.5) / 100);
 		}
 	}
 	@media( min-width: 1480px ) {}
 
+	.project-row {
+		position: relative;
+		z-index: 2;
+		padding: var(--space-100);
+		margin-bottom: var(--space-250);
+	}
+
 	.project {
+		position: relative;
+		z-index: 3;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		min-height: var(--fluid-box-height);
+/*		min-height: var(--fluid-box-height);*/
+		height: calc((var(--view-width) * 1.666) - var(--space-200));
 		align-item: flex-start;
+		box-shadow: inset 0 0 0 1.5px rgba(var(---white), 0.25), inset 0 0 15px 1px rgba(var(---black),0.5);
 	}
 	.project .info {
 		width: 100%;
@@ -31,20 +45,20 @@
 		padding-bottom: calc(var(--fem) * 1.5);
 	}
 	.project .info .title {
-		font-size: calc(var(--fem) * 7);
+		font-size: calc(var(--fem) * 6.25);
 	}
 	.project .info .tags {
 		padding-top: calc(var(--fem) * 3);
 		font-size: 0;
 	}
 
-	.project.fill-light .info .tag {
-		color: var(--light);
-		background-color: var(--dark);
+	.project.text-black .info .tag {
+		color: var(--white);
+		background-color: var(--black);
 	}
-	.project.fill-dark .info .tag {
-		color: var(--dark);
-		background-color: var(--light);
+	.project.text-white .info .tag {
+		color: var(--black);
+		background-color: var(--white);
 	}
 	.project .info .tags .tag {
 		line-height: 2;
@@ -72,6 +86,9 @@
 	}
 
 	@media( min-width: 640px )  {
+		.project {
+			height: calc((var(--view-width) * 1.25) - var(--space-200));
+		}
 		.project .info {
 			width: 75%;
 		}
@@ -83,20 +100,54 @@
 		.project {
 			display: flex;
 			flex-direction: row;
+			height: calc((var(--view-width) * 0.5) - var(--space-200));
 		}
 		.project .info {
 			margin-top: calc(var(--space-100) * 3);
 			width: 50%;
 		}
 		.project .mockup {
-			width: 50%;
+			width: 47%;
 		}
 	}
 	@media( min-width: 1480px ) {}
+
+	.project-row:before {
+		content: '';
+		display: block;
+		position: absolute;
+		z-index: 1;
+		border-radius: var(--space-150);
+		top: var(--space-50);
+		left: var(--space-50);
+		right: var(--space-50);
+		bottom: var(--space-50);
+		background-color: rgba(var(---blue-light), 0.333);
+		filter: blur(150px);
+	}
+
+	.project-row:nth-child(2n+1):before {
+		background-color: rgba(var(---violet-light), 0.333);
+	}
+
+	.project-row:after {
+		content: '';
+		display: block;
+		position: absolute;
+		z-index: 2;
+		border-radius: var(--space-150);
+		top: var(--space-50);
+		left: var(--space-50);
+		right: var(--space-50);
+		bottom: var(--space-50);
+		background-color: rgba(var(---violet-dark-dark), 0.333);
+		box-shadow: 0 0 0 1.5px rgba(var(---violet), 0.5), inset 0 0 3px 0px var(--dark);
+	}
+
 </style>
 <!-- Each Project -->
-<div class="row space-100-left-right space-50-top-bottom">
-	<div class="project fill-dark radius-100 img-cover" style="background-image: url('media/projects/kaatikaadu-bg.png');">
+<div class="row project-row">
+	<div class="project text-white radius-100 img-cover" style="background-image: url('media/projects/kaatikaadu-bg.png');">
 		<div class="info space-150 float-left">
 			<div class="client">KaatiKaadu</div>
 			<div class="title strong font-h">Logo &amp; Website for Jungle Camping Experience Brand</div>
@@ -116,8 +167,8 @@
 </div>
 <!-- End: Each Project -->
 <!-- Each Project -->
-<div class="row space-100-left-right space-50-top-bottom">
-	<div class="project fill-light radius-100 img-cover" style="background-image: url('media/projects/kneetoes-bg.svg');">
+<div class="row project-row">
+	<div class="project text-black fill-white radius-100 img-cover" style="background-image: url('media/projects/kneetoes-bg.svg');">
 		<div class="info space-150 float-left">
 			<div class="client">Kneetoes</div>
 			<div class="title strong font-h">UX Driven Ecommerce and Branding for a Footwear Company</div>
@@ -144,8 +195,8 @@
 </div>
 <!-- End: Each Project -->
 <!-- Each Project -->
-<div class="row space-100-left-right space-50-top-bottom">
-	<div class="project fill-dark radius-100 img-cover" style="background-image: url('media/projects/velvesto-bg.svg');">
+<div class="row project-row">
+	<div class="project text-white radius-100 img-cover" style="background-image: url('media/projects/velvesto-bg.svg');">
 		<div class="info space-150 float-left">
 			<div class="client">Velvesto</div>
 			<div class="title strong font-h">Inception of a Brand: Automotive Detailing Products</div>
@@ -168,8 +219,8 @@
 </div>
 <!-- End: Each Project -->
 <!-- Each Project -->
-<div class="row space-100-left-right space-50-top-bottom">
-	<div class="project fill-light radius-100 img-cover" style="background-image: url('media/projects/bgc-bg.svg');">
+<div class="row project-row">
+	<div class="project text-black radius-100 img-cover" style="background-image: url('media/projects/bgc-bg.svg');">
 		<div class="info space-150 float-left">
 			<div class="client">Bharat Glass &amp; Crockeries</div>
 			<div class="title strong font-h">B2B Digital Transformation & Branding</div>
@@ -193,8 +244,8 @@
 </div>
 <!-- End: Each Project -->
 <!-- Each Project -->
-<div class="row space-100-left-right space-50-top-bottom">
-	<div class="project fill-dark radius-100 img-cover" style="background-image: url('media/projects/ecoline-bg.svg');">
+<div class="row project-row">
+	<div class="project text-white radius-100 img-cover" style="background-image: url('media/projects/ecoline-bg.svg');">
 		<div class="info space-150 float-left">
 			<div class="client">Ecoline Clothing</div>
 			<div class="title strong font-h">Brand Positioning: From Plastic Waste to Sustainable Apparel</div>
@@ -217,8 +268,8 @@
 </div>
 <!-- End: Each Project -->
 <!-- Each Project -->
-<div class="row space-100-left-right space-50-top-bottom">
-	<div class="project fill-light radius-100 img-cover" style="background-image: url('media/projects/dairy-house-bg.svg');">
+<div class="row project-row">
+	<div class="project text-black radius-100 img-cover" style="background-image: url('media/projects/dairy-house-bg.svg');">
 		<div class="info space-150 float-left">
 			<div class="client">Dairy House</div>
 			<div class="title strong font-h">Illustrations and Packaging Design for an Ice Cream Brand</div>
@@ -241,8 +292,8 @@
 </div>
 <!-- End: Each Project -->
 <!-- Each Project -->
-<div class="row space-100-left-right space-50-top-bottom">
-	<div class="project fill-dark radius-100 img-cover" style="background-image: url('media/projects/easeglobal-bg.svg');">
+<div class="row project-row">
+	<div class="project text-white radius-100 img-cover" style="background-image: url('media/projects/easeglobal-bg.svg');">
 		<div class="info space-150 float-left">
 			<div class="client">Easeglobal</div>
 			<div class="title strong font-h">Lead Capture for Global Immigration & Business Registration</div>
@@ -263,8 +314,8 @@
 </div>
 <!-- End: Each Project -->
 <!-- Each Project -->
-<div class="row space-100-left-right space-50-top-bottom">
-	<div class="project fill-light radius-100 img-cover" style="background-image: url('media/projects/bursar-bg.svg');">
+<div class="row project-row">
+	<div class="project text-black radius-100 img-cover" style="background-image: url('media/projects/bursar-bg.svg');">
 		<div class="info space-150 float-left">
 			<div class="client">Bursar</div>
 			<div class="title strong font-h">Study Now Pay Later: Easy Education Loans with PWA solutions</div>
@@ -286,8 +337,8 @@
 </div>
 <!-- End: Each Project -->
 <!-- Each Project -->
-<div class="row space-100-left-right space-50-top-bottom">
-	<div class="project fill-dark radius-100 img-cover" style="background-image: url('media/projects/slipstream-bg.svg');">
+<div class="row project-row">
+	<div class="project text-white radius-100 img-cover" style="background-image: url('media/projects/slipstream-bg.svg');">
 		<div class="info space-150 float-left">
 			<div class="client">SlipStream Performance</div>
 			<div class="title strong font-h">Study Now Pay Later: Easy Education Loans with PWA solutions</div>
@@ -309,8 +360,8 @@
 </div>
 <!-- End: Each Project -->
 <!-- Each Project -->
-<div class="row space-100-left-right space-50-top-bottom">
-	<div class="project fill-light radius-100 img-cover" style="background-image: url('media/projects/umber-bg.png');">
+<div class="row project-row">
+	<div class="project text-black radius-100 img-cover" style="background-image: url('media/projects/umber-bg.png');">
 		<div class="info space-150 float-left">
 			<div class="client">Umber Infusion</div>
 			<div class="title strong font-h">Study Now Pay Later: Easy Education Loans with PWA solutions</div>
@@ -332,8 +383,8 @@
 </div>
 <!-- End: Each Project -->
 <!-- Each Project -->
-<div class="row space-100-left-right space-50-top-bottom">
-	<div class="project fill-dark radius-100 img-cover" style="background-image: url('media/projects/fishandflow-bg.svg');">
+<div class="row project-row">
+	<div class="project text-white radius-100 img-cover" style="background-image: url('media/projects/fishandflow-bg.svg');">
 		<div class="info space-150 float-left">
 			<div class="client">Fish&amp;Flow</div>
 			<div class="title strong font-h">Study Now Pay Later: Easy Education Loans with PWA solutions</div>
